@@ -428,7 +428,7 @@ newt.db = 0.9.0
 
 # Required by:
 # mr.developer==1.21
-setuptools = 35.0.1
+#setuptools = 35.0.1
 
 # Added by buildout at 2017-04-26 10:54:04.577483
 
